backend/analizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    MODULO
    PRINTLN

Grammar

Rule 0     S' -> ini
Rule 1     ini -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> crear_db PYC
Rule 5     instruccion -> crear_tb PYC
Rule 6     instruccion -> cmd_insert PYC
Rule 7     instruccion -> cmd_update PYC
Rule 8     instruccion -> cmd_delete PYC
Rule 9     instruccion -> cmd_select PYC
Rule 10    instruccion -> cmd_drop PYC
Rule 11    instruccion -> cmd_truncate PYC
Rule 12    instruccion -> declaracion_variable PYC
Rule 13    instruccion -> asignacion_variable PYC
Rule 14    instruccion -> crear_procedure PYC
Rule 15    instruccion -> ejecutar_procedure PYC
Rule 16    instruccion -> crear_funcion PYC
Rule 17    instruccion -> cmd_alter PYC
Rule 18    instruccion -> expresion PYC
Rule 19    instruccion -> use_db PYC
Rule 20    instruccion -> sentencia_if PYC
Rule 21    instruccion -> while PYC
Rule 22    crear_db -> CREATE DATA BASE ID
Rule 23    use_db -> USE ID
Rule 24    crear_tb -> CREATE TABLE ID PARA atributos PARC
Rule 25    cmd_insert -> INSERT INTO ID PARA columnas PARC VALUES PARA argumentos PARC
Rule 26    cmd_update -> UPDATE ID SET campos WHERE condicion_where
Rule 27    cmd_delete -> DELETE FROM ID WHERE condicion_where
Rule 28    cmd_drop -> DROP TABLE ID
Rule 29    cmd_truncate -> TRUNCATE TABLE ID
Rule 30    condicion_where -> ID IGUAL expresion
Rule 31    condicion_where_select -> ID BETWEEN expresion
Rule 32    condicion_where_select -> expresion
Rule 33    columnas -> columnas COMA columna
Rule 34    columnas -> columna
Rule 35    columna -> ID
Rule 36    atributos -> atributos COMA atributo
Rule 37    atributos -> atributo
Rule 38    atributo -> ID tipo atributo_opciones
Rule 39    atributo_opciones -> atributo_opciones atributo_opcion
Rule 40    atributo_opciones -> atributo_opcion
Rule 41    atributo_opcion -> NOT NULL
Rule 42    atributo_opcion -> NULL
Rule 43    atributo_opcion -> PRIMARY KEY
Rule 44    atributo_opcion -> REFERENCE
Rule 45    atributo_opcion -> ID PARA ID PARC
Rule 46    cmd_select -> SELECT op_select
Rule 47    op_select -> funcion_sistema
Rule 48    op_select -> select_tabla
Rule 49    op_select -> print
Rule 50    select_tabla -> columnas FROM nombre_tablas WHERE condicion_where_select
Rule 51    select_tabla -> columnas FROM nombre_tablas empty
Rule 52    select_tabla -> MULT FROM nombre_tablas WHERE condicion_where_select
Rule 53    select_tabla -> MULT FROM nombre_tablas empty
Rule 54    nombre_tablas -> columnas
Rule 55    print -> expresion
Rule 56    funcion_sistema -> concatenar
Rule 57    funcion_sistema -> substraer
Rule 58    funcion_sistema -> hoy
Rule 59    funcion_sistema -> contar
Rule 60    funcion_sistema -> suma
Rule 61    funcion_sistema -> cas
Rule 62    concatenar -> CONCATENAR PARA expresion COMA expresion PARC
Rule 63    substraer -> SUBSTRAER PARA expresion COMA expresion COMA expresion PARC
Rule 64    hoy -> HOY PARA PARC
Rule 65    contar -> CONTAR PARA MULT PARC FROM ID WHERE condicion_where
Rule 66    suma -> SUMA PARA expresion PARC FROM ID WHERE condicion_where
Rule 67    cas -> CAS PARA expresion AS tipo PARC
Rule 68    declaracion_variable -> declaracion
Rule 69    declaracion -> DECLARE ARROBA ID tipo
Rule 70    declaracion_inicializada -> DECLARE ARROBA ID tipo IGUAL expresion
Rule 71    asignacion_variable -> SET ARROBA ID IGUAL expresion
Rule 72    campos -> campos COMA campo
Rule 73    campos -> campo
Rule 74    campo -> ID IGUAL expresion
Rule 75    crear_procedure -> CREATE PROCEDURE ID PARA parametros PARC AS
Rule 76    crear_funcion -> CREATE FUNCTION ID PARA parametros PARC RETURNS tipo AS BEGIN RETURN END
Rule 77    parametros -> parametros COMA parametro
Rule 78    parametros -> parametro
Rule 79    parametro -> ARROBA ID tipo
Rule 80    parametro -> empty
Rule 81    argumentos -> argumentos COMA argumento
Rule 82    argumentos -> argumento
Rule 83    argumento -> expresion
Rule 84    argumento -> empty
Rule 85    ejecutar_procedure -> EXEC ID argumentos
Rule 86    cmd_alter -> ALTER TABLE ID ADD COLUMN ID tipo
Rule 87    cmd_alter -> ALTER TABLE ID ADD ID tipo
Rule 88    cmd_alter -> ALTER TABLE ID DROP COLUMN ID
Rule 89    cmd_alter -> ALTER TABLE ID DROP ID
Rule 90    cmd_alter_comp -> COLUMN ID
Rule 91    cmd_alter_comp -> ID
Rule 92    sentencia_if -> IF expresion THEN bloque END IF
Rule 93    sentencia_if -> IF expresion THEN bloque lista_else_if END IF
Rule 94    sentencia_if -> IF expresion THEN bloque lista_else_if ELSE THEN bloque END IF
Rule 95    sentencia_if -> IF expresion THEN bloque ELSE THEN bloque END IF
Rule 96    lista_else_if -> lista_else_if ELSE IF expresion THEN bloque
Rule 97    lista_else_if -> ELSE IF expresion THEN bloque
Rule 98    while -> WHILE expresion BEGIN bloque END
Rule 99    bloque -> instrucciones
Rule 100   expresion -> aritmetica
Rule 101   expresion -> relacional
Rule 102   expresion -> logica
Rule 103   expresion -> literal
Rule 104   expresion -> PARA expresion PARC
Rule 105   expresion -> ARROBA ID
Rule 106   relacional -> expresion IGUAL expresion
Rule 107   relacional -> expresion IGUALDAD expresion
Rule 108   relacional -> expresion DESIGUALDAD expresion
Rule 109   relacional -> expresion MENOR expresion
Rule 110   relacional -> expresion MAYOR expresion
Rule 111   relacional -> expresion MENOR_IGUAL expresion
Rule 112   relacional -> expresion MAYOR_IGUAL expresion
Rule 113   relacional -> expresion AMPERSON expresion
Rule 114   aritmetica -> expresion SUMAR expresion
Rule 115   aritmetica -> expresion RESTAR expresion
Rule 116   aritmetica -> expresion MULT expresion
Rule 117   aritmetica -> expresion DIV expresion
Rule 118   aritmetica -> RESTAR expresion
Rule 119   logica -> NEGACION expresion
Rule 120   logica -> expresion OR expresion
Rule 121   logica -> expresion AND expresion
Rule 122   literal -> ENTERO
Rule 123   literal -> CADENA
Rule 124   literal -> FLOAT
Rule 125   literal -> ID
Rule 126   tipo -> INT
Rule 127   tipo -> BIT
Rule 128   tipo -> DECIMAL
Rule 129   tipo -> DATE
Rule 130   tipo -> DATETIME
Rule 131   tipo -> NCHAR PARA literal PARC
Rule 132   tipo -> NVARCHAR PARA literal PARC
Rule 133   empty -> <empty>

Terminals, with rules where they appear

ADD                  : 86 87
ALTER                : 86 87 88 89
AMPERSON             : 113
AND                  : 121
ARROBA               : 69 70 71 79 105
AS                   : 67 75 76
BASE                 : 22
BEGIN                : 76 98
BETWEEN              : 31
BIT                  : 127
CADENA               : 123
CAS                  : 67
COLUMN               : 86 88 90
COMA                 : 33 36 62 63 63 72 77 81
CONCATENAR           : 62
CONTAR               : 65
CREATE               : 22 24 75 76
DATA                 : 22
DATE                 : 129
DATETIME             : 130
DECIMAL              : 128
DECLARE              : 69 70
DELETE               : 27
DESIGUALDAD          : 108
DIV                  : 117
DROP                 : 28 88 89
ELSE                 : 94 95 96 97
END                  : 76 92 93 94 95 98
ENTERO               : 122
EXEC                 : 85
FLOAT                : 124
FROM                 : 27 50 51 52 53 65 66
FUNCTION             : 76
HOY                  : 64
ID                   : 22 23 24 25 26 27 28 29 30 31 35 38 45 45 65 66 69 70 71 74 75 76 79 85 86 86 87 87 88 88 89 89 90 91 105 125
IF                   : 92 92 93 93 94 94 95 95 96 97
IGUAL                : 30 70 71 74 106
IGUALDAD             : 107
INSERT               : 25
INT                  : 126
INTO                 : 25
KEY                  : 43
MAYOR                : 110
MAYOR_IGUAL          : 112
MENOR                : 109
MENOR_IGUAL          : 111
MODULO               : 
MULT                 : 52 53 65 116
NCHAR                : 131
NEGACION             : 119
NOT                  : 41
NULL                 : 41 42
NVARCHAR             : 132
OR                   : 120
PARA                 : 24 25 25 45 62 63 64 65 66 67 75 76 104 131 132
PARC                 : 24 25 25 45 62 63 64 65 66 67 75 76 104 131 132
PRIMARY              : 43
PRINTLN              : 
PROCEDURE            : 75
PYC                  : 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
REFERENCE            : 44
RESTAR               : 115 118
RETURN               : 76
RETURNS              : 76
SELECT               : 46
SET                  : 26 71
SUBSTRAER            : 63
SUMA                 : 66
SUMAR                : 114
TABLE                : 24 28 29 86 87 88 89
THEN                 : 92 93 94 94 95 95 96 97
TRUNCATE             : 29
UPDATE               : 26
USE                  : 23
VALUES               : 25
WHERE                : 26 27 50 52 65 66
WHILE                : 98
error                : 

Nonterminals, with rules where they appear

argumento            : 81 82
argumentos           : 25 81 85
aritmetica           : 100
asignacion_variable  : 13
atributo             : 36 37
atributo_opcion      : 39 40
atributo_opciones    : 38 39
atributos            : 24 36
bloque               : 92 93 94 94 95 95 96 97 98
campo                : 72 73
campos               : 26 72
cas                  : 61
cmd_alter            : 17
cmd_alter_comp       : 
cmd_delete           : 8
cmd_drop             : 10
cmd_insert           : 6
cmd_select           : 9
cmd_truncate         : 11
cmd_update           : 7
columna              : 33 34
columnas             : 25 33 50 51 54
concatenar           : 56
condicion_where      : 26 27 65 66
condicion_where_select : 50 52
contar               : 59
crear_db             : 4
crear_funcion        : 16
crear_procedure      : 14
crear_tb             : 5
declaracion          : 68
declaracion_inicializada : 
declaracion_variable : 12
ejecutar_procedure   : 15
empty                : 51 53 80 84
expresion            : 18 30 31 32 55 62 62 63 63 63 66 67 70 71 74 83 92 93 94 95 96 97 98 104 106 106 107 107 108 108 109 109 110 110 111 111 112 112 113 113 114 114 115 115 116 116 117 117 118 119 120 120 121 121
funcion_sistema      : 47
hoy                  : 58
ini                  : 0
instruccion          : 2 3
instrucciones        : 1 2 99
lista_else_if        : 93 94 96
literal              : 103 131 132
logica               : 102
nombre_tablas        : 50 51 52 53
op_select            : 46
parametro            : 77 78
parametros           : 75 76 77
print                : 49
relacional           : 101
select_tabla         : 48
sentencia_if         : 20
substraer            : 57
suma                 : 60
tipo                 : 38 67 69 70 76 79 86 87
use_db               : 19
while                : 21

Parsing method: LALR

state 0

    (0) S' -> . ini
    (1) ini -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . crear_db PYC
    (5) instruccion -> . crear_tb PYC
    (6) instruccion -> . cmd_insert PYC
    (7) instruccion -> . cmd_update PYC
    (8) instruccion -> . cmd_delete PYC
    (9) instruccion -> . cmd_select PYC
    (10) instruccion -> . cmd_drop PYC
    (11) instruccion -> . cmd_truncate PYC
    (12) instruccion -> . declaracion_variable PYC
    (13) instruccion -> . asignacion_variable PYC
    (14) instruccion -> . crear_procedure PYC
    (15) instruccion -> . ejecutar_procedure PYC
    (16) instruccion -> . crear_funcion PYC
    (17) instruccion -> . cmd_alter PYC
    (18) instruccion -> . expresion PYC
    (19) instruccion -> . use_db PYC
    (20) instruccion -> . sentencia_if PYC
    (21) instruccion -> . while PYC
    (22) crear_db -> . CREATE DATA BASE ID
    (24) crear_tb -> . CREATE TABLE ID PARA atributos PARC
    (25) cmd_insert -> . INSERT INTO ID PARA columnas PARC VALUES PARA argumentos PARC
    (26) cmd_update -> . UPDATE ID SET campos WHERE condicion_where
    (27) cmd_delete -> . DELETE FROM ID WHERE condicion_where
    (46) cmd_select -> . SELECT op_select
    (28) cmd_drop -> . DROP TABLE ID
    (29) cmd_truncate -> . TRUNCATE TABLE ID
    (68) declaracion_variable -> . declaracion
    (71) asignacion_variable -> . SET ARROBA ID IGUAL expresion
    (75) crear_procedure -> . CREATE PROCEDURE ID PARA parametros PARC AS
    (85) ejecutar_procedure -> . EXEC ID argumentos
    (76) crear_funcion -> . CREATE FUNCTION ID PARA parametros PARC RETURNS tipo AS BEGIN RETURN END
    (86) cmd_alter -> . ALTER TABLE ID ADD COLUMN ID tipo
    (87) cmd_alter -> . ALTER TABLE ID ADD ID tipo
    (88) cmd_alter -> . ALTER TABLE ID DROP COLUMN ID
    (89) cmd_alter -> . ALTER TABLE ID DROP ID
    (100) expresion -> . aritmetica
    (101) expresion -> . relacional
    (102) expresion -> . logica
    (103) expresion -> . literal
    (104) expresion -> . PARA expresion PARC
    (105) expresion -> . ARROBA ID
    (23) use_db -> . USE ID
    (92) sentencia_if -> . IF expresion THEN bloque END IF
    (93) sentencia_if -> . IF expresion THEN bloque lista_else_if END IF
    (94) sentencia_if -> . IF expresion THEN bloque lista_else_if ELSE THEN bloque END IF
    (95) sentencia_if -> . IF expresion THEN bloque ELSE THEN bloque END IF
    (98) while -> . WHILE expresion BEGIN bloque END
    (69) declaracion -> . DECLARE ARROBA ID tipo
    (114) aritmetica -> . expresion SUMAR expresion
    (115) aritmetica -> . expresion RESTAR expresion
    (116) aritmetica -> . expresion MULT expresion
    (117) aritmetica -> . expresion DIV expresion
    (118) aritmetica -> . RESTAR expresion
    (106) relacional -> . expresion IGUAL expresion
    (107) relacional -> . expresion IGUALDAD expresion
    (108) relacional -> . expresion DESIGUALDAD expresion
    (109) relacional -> . expresion MENOR expresion
    (110) relacional -> . expresion MAYOR expresion
    (111) relacional -> . expresion MENOR_IGUAL expresion
    (112) relacional -> . expresion MAYOR_IGUAL expresion
    (113) relacional -> . expresion AMPERSON expresion
    (119) logica -> . NEGACION expresion
    (120) logica -> . expresion OR expresion
    (121) logica -> . expresion AND expresion
    (122) literal -> . ENTERO
    (123) literal -> . CADENA
    (124) literal -> . FLOAT
    (125) literal -> . ID

    CREATE          shift and go to state 22
    INSERT          shift and go to state 25
    UPDATE          shift and go to state 26
    DELETE          shift and go to state 28
    SELECT          shift and go to state 29
    DROP            shift and go to state 30
    TRUNCATE        shift and go to state 31
    SET             shift and go to state 27
    EXEC            shift and go to state 34
    ALTER           shift and go to state 35
    PARA            shift and go to state 24
    ARROBA          shift and go to state 33
    USE             shift and go to state 40
    IF              shift and go to state 41
    WHILE           shift and go to state 42
    DECLARE         shift and go to state 43
    RESTAR          shift and go to state 44
    NEGACION        shift and go to state 45
    ENTERO          shift and go to state 46
    CADENA          shift and go to state 47
    FLOAT           shift and go to state 48
    ID              shift and go to state 23

    ini                            shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    crear_db                       shift and go to state 4
    crear_tb                       shift and go to state 5
    cmd_insert                     shift and go to state 6
    cmd_update                     shift and go to state 7
    cmd_delete                     shift and go to state 8
    cmd_select                     shift and go to state 9
    cmd_drop                       shift and go to state 10
    cmd_truncate                   shift and go to state 11
    declaracion_variable           shift and go to state 12
    asignacion_variable            shift and go to state 13
    crear_procedure                shift and go to state 14
    ejecutar_procedure             shift and go to state 15
    crear_funcion                  shift and go to state 16
    cmd_alter                      shift and go to state 17
    expresion                      shift and go to state 18
    use_db                         shift and go to state 19
    sentencia_if                   shift and go to state 20
    while                          shift and go to state 21
    declaracion                    shift and go to state 32
    aritmetica                     shift and go to state 36
    relacional                     shift and go to state 37
    logica                         shift and go to state 38
    literal                        shift and go to state 39

state 1

    (0) S' -> ini .



state 2

    (1) ini -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . crear_db PYC
    (5) instruccion -> . crear_tb PYC
    (6) instruccion -> . cmd_insert PYC
    (7) instruccion -> . cmd_update PYC
    (8) instruccion -> . cmd_delete PYC
    (9) instruccion -> . cmd_select PYC
    (10) instruccion -> . cmd_drop PYC
    (11) instruccion -> . cmd_truncate PYC
    (12) instruccion -> . declaracion_variable PYC
    (13) instruccion -> . asignacion_variable PYC
    (14) instruccion -> . crear_procedure PYC
    (15) instruccion -> . ejecutar_procedure PYC
    (16) instruccion -> . crear_funcion PYC
    (17) instruccion -> . cmd_alter PYC
    (18) instruccion -> . expresion PYC
    (19) instruccion -> . use_db PYC
    (20) instruccion -> . sentencia_if PYC
    (21) instruccion -> . while PYC
    (22) crear_db -> . CREATE DATA BASE ID
    (24) crear_tb -> . CREATE TABLE ID PARA atributos PARC
    (25) cmd_insert -> . INSERT INTO ID PARA columnas PARC VALUES PARA argumentos PARC
    (26) cmd_update -> . UPDATE ID SET campos WHERE condicion_where
    (27) cmd_delete -> . DELETE FROM ID WHERE condicion_where
    (46) cmd_select -> . SELECT op_select
    (28) cmd_drop -> . DROP TABLE ID
    (29) cmd_truncate -> . TRUNCATE TABLE ID
    (68) declaracion_variable -> . declaracion
    (71) asignacion_variable -> . SET ARROBA ID IGUAL expresion
    (75) crear_procedure -> . CREATE PROCEDURE ID PARA parametros PARC AS
    (85) ejecutar_procedure -> . EXEC ID argumentos
    (76) crear_funcion -> . CREATE FUNCTION ID PARA parametros PARC RETURNS tipo AS BEGIN RETURN END
    (86) cmd_alter -> . ALTER TABLE ID ADD COLUMN ID tipo
    (87) cmd_alter -> . ALTER TABLE ID ADD ID tipo
    (88) cmd_alter -> . ALTER TABLE ID DROP COLUMN ID
    (89) cmd_alter -> . ALTER TABLE ID DROP ID
    (100) expresion -> . aritmetica
    (101) expresion -> . relacional
    (102) expresion -> . logica
    (103) expresion -> . literal
    (104) expresion -> . PARA expresion PARC
    (105) expresion -> . ARROBA ID
    (23) use_db -> . USE ID
    (92) sentencia_if -> . IF expresion THEN bloque END IF
    (93) sentencia_if -> . IF expresion THEN bloque lista_else_if END IF
    (94) sentencia_if -> . IF expresion THEN bloque lista_else_if ELSE THEN bloque END IF
    (95) sentencia_if -> . IF expresion THEN bloque ELSE THEN bloque END IF
    (98) while -> . WHILE expresion BEGIN bloque END
    (69) declaracion -> . DECLARE ARROBA ID tipo
    (114) aritmetica -> . expresion SUMAR expresion
    (115) aritmetica -> . expresion RESTAR expresion
    (116) aritmetica -> . expresion MULT expresion
    (117) aritmetica -> . expresion DIV expresion
    (118) aritmetica -> . RESTAR expresion
    (106) relacional -> . expresion IGUAL expresion
    (107) relacional -> . expresion IGUALDAD expresion
    (108) relacional -> . expresion DESIGUALDAD expresion
    (109) relacional -> . expresion MENOR expresion
    (110) relacional -> . expresion MAYOR expresion
    (111) relacional -> . expresion MENOR_IGUAL expresion
    (112) relacional -> . expresion MAYOR_IGUAL expresion
    (113) relacional -> . expresion AMPERSON expresion
    (119) logica -> . NEGACION expresion
    (120) logica -> . expresion OR expresion
    (121) logica -> . expresion AND expresion
    (122) literal -> . ENTERO
    (123) literal -> . CADENA
    (124) literal -> . FLOAT
    (125) literal -> . ID

    $end            reduce using rule 1 (ini -> instrucciones .)
    CREATE          shift and go to state 22
    INSERT          shift and go to state 25
    UPDATE          shift and go to state 26
    DELETE          shift and go to state 28
    SELECT          shift and go to state 29
    DROP            shift and go to state 30
    TRUNCATE        shift and go to state 31
    SET             shift and go to state 27
    EXEC            shift and go to state 34
    ALTER           shift and go to state 35
    PARA            shift and go to state 24
    ARROBA          shift and go to state 33
    USE             shift and go to state 40
    IF              shift and go to state 41
    WHILE           shift and go to state 42
    DECLARE         shift and go to state 43
    RESTAR          shift and go to state 44
    NEGACION        shift and go to state 45
    ENTERO          shift and go to state 46
    CADENA          shift and go to state 47
    FLOAT           shift and go to state 48
    ID              shift and go to state 23

    instruccion                    shift and go to state 49
    crear_db                       shift and go to state 4
    crear_tb                       shift and go to state 5
    cmd_insert                     shift and go to state 6
    cmd_update                     shift and go to state 7
    cmd_delete                     shift and go to state 8
    cmd_select                     shift and go to state 9
    cmd_drop                       shift and go to state 10
    cmd_truncate                   shift and go to state 11
    declaracion_variable           shift and go to state 12
    asignacion_variable            shift and go to state 13
    crear_procedure                shift and go to state 14
    ejecutar_procedure             shift and go to state 15
    crear_funcion                  shift and go to state 16
    cmd_alter                      shift and go to state 17
    expresion                      shift and go to state 18
    use_db                         shift and go to state 19
    sentencia_if                   shift and go to state 20
    while                          shift and go to state 21
    declaracion                    shift and go to state 32
    aritmetica                     shift and go to state 36
    relacional                     shift and go to state 37
    logica                         shift and go to state 38
    literal                        shift and go to state 39

state 3

    (3) instrucciones -> instruccion .

    CREATE          reduce using rule 3 (instrucciones -> instruccion .)
    INSERT          reduce using rule 3 (instrucciones -> instruccion .)
    UPDATE          reduce using rule 3 (instrucciones -> instruccion .)
    DELETE          reduce using rule 3 (instrucciones -> instruccion .)
    SELECT          reduce using rule 3 (instrucciones -> instruccion .)
    DROP            reduce using rule 3 (instrucciones -> instruccion .)
    TRUNCATE        reduce using rule 3 (instrucciones -> instruccion .)
    SET             reduce using rule 3 (instrucciones -> instruccion .)
    EXEC            reduce using rule 3 (instrucciones -> instruccion .)
    ALTER           reduce using rule 3 (instrucciones -> instruccion .)
    PARA            reduce using rule 3 (instrucciones -> instruccion .)
    ARROBA          reduce using rule 3 (instrucciones -> instruccion .)
    USE             reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    WHILE           reduce using rule 3 (instrucciones -> instruccion .)
    DECLARE         reduce using rule 3 (instrucciones -> instruccion .)
    RESTAR          reduce using rule 3 (instrucciones -> instruccion .)
    NEGACION        reduce using rule 3 (instrucciones -> instruccion .)
    ENTERO          reduce using rule 3 (instrucciones -> instruccion .)
    CADENA          reduce using rule 3 (instrucciones -> instruccion .)
    FLOAT           reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    END             reduce using rule 3 (instrucciones -> instruccion .)
    ELSE            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> crear_db . PYC

    PYC             shift and go to state 50


state 5

    (5) instruccion -> crear_tb . PYC

    PYC             shift and go to state 51


state 6

    (6) instruccion -> cmd_insert . PYC

    PYC             shift and go to state 52


state 7

    (7) instruccion -> cmd_update . PYC

    PYC             shift and go to state 53


state 8

    (8) instruccion -> cmd_delete . PYC

    PYC             shift and go to state 54


state 9

    (9) instruccion -> cmd_select . PYC

    PYC             shift and go to state 55


state 10

    (10) instruccion -> cmd_drop . PYC

    PYC             shift and go to state 56


state 11

    (11) instruccion -> cmd_truncate . PYC

    PYC             shift and go to state 57


state 12

    (12) instruccion -> declaracion_variable . PYC

    PYC             shift and go to state 58


state 13

    (13) instruccion -> asignacion_variable . PYC

    PYC             shift and go to state 59


state 14

    (14) instruccion -> crear_procedure . PYC

    PYC             shift and go to state 60


state 15

    (15) instruccion -> ejecutar_procedure . PYC

    PYC             shift and go to state 61


state 16

    (16) instruccion -> crear_funcion . PYC

    PYC             shift and go to state 62


state 17

    (17) instruccion -> cmd_alter . PYC

    PYC             shift and go to state 63


state 18

    (18) instruccion -> expresion . PYC
    (114) aritmetica -> expresion . SUMAR expresion
    (115) aritmetica -> expresion . RESTAR expresion
    (116) aritmetica -> expresion . MULT expresion
    (117) aritmetica -> expresion . DIV expresion
    (106) relacional -> expresion . IGUAL expresion
    (107) relacional -> expresion . IGUALDAD expresion
    (108) relacional -> expresion . DESIGUALDAD expresion
    (109) relacional -> expresion . MENOR expresion
    (110) relacional -> expresion . MAYOR expresion
    (111) relacional -> expresion . MENOR_IGUAL expresion
    (112) relacional -> expresion . MAYOR_IGUAL expresion
    (113) relacional -> expresion . AMPERSON expresion
    (120) logica -> expresion . OR expresion
    (121) logica -> expresion . AND expresion

    PYC             shift and go to state 64
    SUMAR           shift and go to state 65
    RESTAR          shift and go to state 66
    MULT            shift and go to state 67
    DIV             shift and go to state 68
    IGUAL           shift and go to state 69
    IGUALDAD        shift and go to state 70
    DESIGUALDAD     shift and go to state 71
    MENOR           shift and go to state 72
    MAYOR           shift and go to state 73
    MENOR_IGUAL     shift and go to state 74
    MAYOR_IGUAL     shift and go to state 75
    AMPERSON        shift and go to state 76
    OR              shift and go to state 77
    AND             shift and go to state 78


state 19

    (19) instruccion -> use_db . PYC

    PYC             shift and go to state 79


state 20

    (20) instruccion -> sentencia_if . PYC

    PYC             shift and go to state 80


state 21

    (21) instruccion -> while . PYC

    PYC             shift and go to state 81


state 22

    (22) crear_db -> CREATE . DATA BASE ID
    (24) crear_tb -> CREATE . TABLE ID PARA atributos PARC
    (75) crear_procedure -> CREATE . PROCEDURE ID PARA parametros PARC AS
    (76) crear_funcion -> CREATE . FUNCTION ID PARA parametros PARC RETURNS tipo AS BEGIN RETURN END

    DATA            shift and go to state 82
    TABLE           shift and go to state 83
    PROCEDURE       shift and go to state 84
    FUNCTION        shift and go to state 85


state 23

    (125) literal -> ID .

    PYC             reduce using rule 125 (literal -> ID .)
    SUMAR           reduce using rule 125 (literal -> ID .)
    RESTAR          reduce using rule 125 (literal -> ID .)
    MULT            reduce using rule 125 (literal -> ID .)
    DIV             reduce using rule 125 (literal -> ID .)
    IGUAL           reduce using rule 125 (literal -> ID .)
    IGUALDAD        reduce using rule 125 (literal -> ID .)
    DESIGUALDAD     reduce using rule 125 (literal -> ID .)
    MENOR           reduce using rule 125 (literal -> ID .)
    MAYOR           reduce using rule 125 (literal -> ID .)
    MENOR_IGUAL     reduce using rule 125 (literal -> ID .)
    MAYOR_IGUAL     reduce using rule 125 (literal -> ID .)
    AMPERSON        reduce using rule 125 (literal -> ID .)
    OR              reduce using rule 125 (literal -> ID .)
    AND             reduce using rule 125 (literal -> ID .)
    PARC            reduce using rule 125 (literal -> ID .)
    THEN            reduce using rule 125 (literal -> ID .)
    BEGIN           reduce using rule 125 (literal -> ID .)
    COMA            reduce using rule 125 (literal -> ID .)
    AS              reduce using rule 125 (literal -> ID .)
    WHERE           reduce using rule 125 (literal -> ID .)


state 24

    (104) expresion -> PARA . expresion PARC
    (100) expresion -> . aritmetica
    (101) expresion -> . relacional
    (102) expresion -> . logica
    (103) expresion -> . literal
    (104) expresion -> . PARA expresion PARC
    (105) expresion -> . ARROBA ID
    (114) aritmetica -> . expresion SUMAR expresion
    (115) aritmetica -> . expresion RESTAR expresion
    (116) aritmetica -> . expresion MULT expresion
    (117) aritmetica -> . expresion DIV expresion
    (118) aritmetica -> . RESTAR expresion
    (106) relacional -> . expresion IGUAL expresion
    (107) relacional -> . expresion IGUALDAD expresion
    (108) relacional -> . expresion DESIGUALDAD expresion
    (109) relacional -> . expresion MENOR expresion
    (110) relacional -> . expresion MAYOR expresion
    (111) relacional -> . expresion MENOR_IGUAL expresion
    (112) relacional -> . expresion MAYOR_IGUAL expresion
    (113) relacional -> . expresion AMPERSON expresion
    (119) logica -> . NEGACION expresion
    (120) logica -> . expresion OR expresion
    (121) logica -> . expresion AND expresion
    (122) literal -> . ENTERO
    (123) literal -> . CADENA
    (124) literal -> . FLOAT
    (125) literal -> . ID

    PARA            shift and go to state 24
    ARROBA          shift and go to state 33
    RESTAR          shift and go to state 44
    NEGACION        shift and go to state 45
    ENTERO          shift and go to state 46
    CADENA          shift and go to state 47
    FLOAT           shift and go to state 48
    ID              shift and go to state 23

    expresion                      shift and go to state 86
    aritmetica                     shift and go to state 36
    relacional                     shift and go to state 37
    logica                         shift and go to state 38
    literal                        shift and go to state 39

state 25

    (25) cmd_insert -> INSERT . INTO ID PARA columnas PARC VALUES PARA argumentos PARC

    INTO            shift and go to state 87


state 26

    (26) cmd_update -> UPDATE . ID SET campos WHERE condicion_where

    ID              shift and go to state 88


state 27

    (71) asignacion_variable -> SET . ARROBA ID IGUAL expresion

    ARROBA          shift and go to state 89


state 28

    (27) cmd_delete -> DELETE . FROM ID WHERE condicion_where

    FROM            shift and go to state 90


state 29
